...
			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_collapseMode="parallax">
				
				<ImageView
					android:id="@+id/display_child_picture"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:adjustViewBounds="true"
					android:contentDescription="@string/picture"
					android:fitsSystemWindows="true"
					android:scaleType="centerCrop"
...
					android:background="@drawable/backdrop_background"
					android:layout_gravity="center_horizontal|bottom" />
			
			</FrameLayout>
			
			<androidx.appcompat.widget.Toolbar
				android:id="@+id/display_child_toolbar"
				android:layout_width="match_parent"
				android:layout_height="?actionBarSize"
				app:layout_collapseMode="pin"
				app:popupTheme="@style/AppTheme.PopupOverlay" />
		
		</com.google.android.material.appbar.CollapsingToolbarLayout>
...
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/displayChildHeaderMarginBottom"
				android:layout_marginStart="@dimen/displayChildHeaderMarginStart"
				android:layout_marginTop="@dimen/displayChildDescriptionLabelMarginTop"
				android:fontFamily="sans-serif"
				android:text="@string/description"
				android:textColor="@color/colorFontSection" />
			
			<androidx.cardview.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/displayChildCardMarginEnd"
...
					android:layout_height="match_parent"
					android:orientation="vertical"
					android:paddingTop="@dimen/displayChildCardPaddingTop"
					android:paddingBottom="@dimen/displayChildCardPaddingBottom">
					
					<TextView
						android:id="@+id/display_child_name"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:layout_marginBottom="@dimen/displayChildDetailMarginBottom"
						android:drawablePadding="@dimen/displayChildDetailDrawablePadding"
						android:drawableStart="@drawable/ic_username"
...
					<include
						layout="@layout/content_divider"
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />
					
					<TextView
						android:id="@+id/display_child_age"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:layout_marginBottom="@dimen/displayChildDetailMarginBottom"
						android:layout_marginTop="@dimen/displayChildDetailMarginTop"
						android:drawablePadding="@dimen/displayChildDetailDrawablePadding"
...
					<include
						layout="@layout/content_divider"
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />
					
					<TextView
						android:id="@+id/display_child_gender"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:layout_marginBottom="@dimen/displayChildDetailMarginBottom"
						android:layout_marginTop="@dimen/displayChildDetailMarginTop"
						android:drawablePadding="@dimen/displayChildDetailDrawablePadding"
...
					<include
						layout="@layout/content_divider"
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />
					
					<TextView
						android:id="@+id/display_child_height"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:layout_marginBottom="@dimen/displayChildDetailMarginBottom"
						android:layout_marginTop="@dimen/displayChildDetailMarginTop"
						android:drawablePadding="@dimen/displayChildDetailDrawablePadding"
...
					<include
						layout="@layout/content_divider"
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />
					
					<TextView
						android:id="@+id/display_child_skin"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:layout_marginBottom="@dimen/displayChildDetailMarginBottom"
						android:layout_marginTop="@dimen/displayChildDetailMarginTop"
						android:drawablePadding="@dimen/displayChildDetailDrawablePadding"
...
					<include
						layout="@layout/content_divider"
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />
					
					<TextView
						android:id="@+id/display_child_hair"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:layout_marginTop="@dimen/displayChildDetailMarginTop"
						android:drawablePadding="@dimen/displayChildDetailDrawablePadding"
						android:drawableStart="@drawable/ic_hair"
...
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/displayChildHeaderMarginBottom"
				android:layout_marginStart="@dimen/displayChildHeaderMarginStart"
				android:layout_marginTop="@dimen/displayChildDetailsLabelMarginTop"
				android:fontFamily="sans-serif"
				android:text="@string/details"
				android:textColor="@color/colorFontSection" />
			
			<androidx.cardview.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/displayChildMarginBottom"
...
					android:layout_height="match_parent"
					android:orientation="vertical"
					android:paddingTop="@dimen/displayChildCardPaddingTop"
					android:paddingBottom="@dimen/displayChildCardPaddingBottom">
					
					<TextView
						android:id="@+id/display_child_location"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:layout_marginBottom="@dimen/displayChildDetailMarginBottom"
						android:drawablePadding="@dimen/displayChildDetailDrawablePadding"
						android:drawableStart="@drawable/ic_location"
...
					<include
						layout="@layout/content_divider"
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />
					
					<TextView
						android:id="@+id/display_child_notes"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:layout_marginTop="@dimen/displayChildDetailMarginTop"
						android:drawablePadding="@dimen/displayChildDetailDrawablePadding"
						android:drawableStart="@drawable/ic_notes"
...
