<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<include
		layout="@layout/content_toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
	
	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:orientation="vertical"
			android:paddingBottom="@dimen/addChildPaddingBottom"
			android:paddingEnd="@dimen/addChildPaddingEnd"
			android:paddingStart="@dimen/addChildPaddingStart"
			android:paddingTop="@dimen/addChildPaddingTop">
			
			<include
				layout="@layout/content_child_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				android:paddingBottom="@dimen/addChildLocationPaddingBottom"
				android:paddingTop="@dimen/addChildLocationPaddingTop"
				tools:ignore="UseCompoundDrawables">
				
				<TextView
					android:id="@+id/add_child_location_text_view"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center_vertical"
					android:paddingEnd="@dimen/addChildLocationTextPaddingEnd"
					android:paddingStart="@dimen/addChildLocationTextPaddingStart"
					android:text="@string/no_location_specified" />
				
				<ImageView
					android:id="@+id/add_child_location_image_view"
					android:layout_width="@dimen/addChildLocationIconWidth"
					android:layout_height="@dimen/addChildLocationIconHeight"
					android:layout_marginEnd="@dimen/addChildLocationIconMarginEnd"
					android:layout_marginStart="@dimen/addChildLocationIconMarginStart"
					android:contentDescription="@string/point_location_on_map"
					app:srcCompat="@drawable/ic_google_maps" />
			
			</LinearLayout>
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:orientation="horizontal">
				
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingEnd="@dimen/addChildLabelPaddingEnd"
					android:paddingStart="@dimen/addChildLabelPaddingStart"
					android:text="@string/age"
					android:textColor="@android:color/black"
					android:textSize="@dimen/addChildLabelTextSize" />
				
				<com.jaygoo.widget.RangeSeekBar
					android:id="@+id/add_child_age_seek_bar"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					app:rsb_indicator_height="@dimen/addChildSeekBarIndicatorHeight"
					app:rsb_indicator_padding_left="@dimen/addChildSeekBarIndicatorPaddingLeft"
					app:rsb_indicator_padding_right="@dimen/addChildSeekBarIndicatorPaddingRight"
					app:rsb_indicator_radius="@dimen/addChildSeekBarIndicatorRadius"
					app:rsb_indicator_show_mode="alwaysShow"
					app:rsb_max="@integer/add_child_age_seek_bar_max"
					app:rsb_min="@integer/add_child_age_seek_bar_min"
					app:rsb_mode="range"
					app:rsb_progress_color="@color/colorAccent"
					app:rsb_progress_radius="0.8dp"
					app:rsb_range_interval="1"
					app:rsb_tick_mark_mode="number"
					app:rsb_tick_mark_number="1"
					app:rsb_tick_mark_text_array="@array/age_marks" />
			
			</LinearLayout>
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:orientation="horizontal">
				
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingEnd="@dimen/addChildLabelPaddingEnd"
					android:paddingStart="@dimen/addChildLabelPaddingStart"
					android:text="@string/height"
					android:textColor="@android:color/black"
					android:textSize="@dimen/addChildLabelTextSize" />
				
				<com.jaygoo.widget.RangeSeekBar
					android:id="@+id/add_child_height_seek_bar"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					app:rsb_indicator_height="@dimen/addChildSeekBarIndicatorHeight"
					app:rsb_indicator_padding_left="@dimen/addChildSeekBarIndicatorPaddingLeft"
					app:rsb_indicator_padding_right="@dimen/addChildSeekBarIndicatorPaddingRight"
					app:rsb_indicator_radius="@dimen/addChildSeekBarIndicatorRadius"
					app:rsb_indicator_show_mode="alwaysShow"
					app:rsb_max="@integer/add_child_height_seek_bar_max"
					app:rsb_min="@integer/add_child_height_seek_bar_min"
					app:rsb_mode="range"
					app:rsb_progress_color="@color/colorAccent"
					app:rsb_progress_radius="0.8dp"
					app:rsb_range_interval="1"
					app:rsb_tick_mark_mode="number"
					app:rsb_tick_mark_number="1"
					app:rsb_tick_mark_text_array="@array/height_marks" />
			
			</LinearLayout>
			
			<include
				layout="@layout/content_child_gender"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
			
			<include
				layout="@layout/content_child_skin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
			
			<include
				layout="@layout/content_child_hair"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/addChildHairPaddingBottom" />
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				android:paddingBottom="@dimen/addChildPicturePaddingBottom">
				
				<de.hdodenhof.circleimageview.CircleImageView
					android:id="@+id/add_child_picture_image_view"
					android:layout_width="@dimen/addChildPictureWidth"
					android:layout_height="@dimen/addChildPictureHeight"
					android:src="@drawable/placeholder" />
				
				<TextView
					android:id="@+id/add_child_picture_text_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="@dimen/addChildPictureTextPadding"
					android:text="@string/choose_a_picture"
					android:textColor="@color/colorAccent"
					android:textSize="@dimen/addChildPictureTextSize" />
			
			</LinearLayout>
			
			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/add_child_notes_edit_text"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/notes"
					android:inputType="textMultiLine" />
			
			</com.google.android.material.textfield.TextInputLayout>
			
			<Button
				android:id="@+id/add_child_publish_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/addChildButtonMarginEnd"
				android:layout_marginStart="@dimen/addChildButtonMarginStart"
				android:layout_marginTop="@dimen/addChildButtonMarginTop"
				android:padding="@dimen/addChildButtonPadding"
				android:background="@color/colorAccent"
				android:clickable="true"
				android:focusable="true"
				android:foreground="?selectableItemBackground"
				android:text="@string/publish"
				android:textColor="@android:color/white"
				tools:ignore="UnusedAttribute" />
		
		</LinearLayout>
	
	</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
