<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<include
		layout="@layout/content_appbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
	
	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:orientation="vertical"
			android:paddingBottom="@dimen/findChildrenPaddingBottom"
			android:paddingEnd="@dimen/findChildrenPaddingEnd"
			android:paddingStart="@dimen/findChildrenPaddingStart"
			android:paddingTop="@dimen/findChildrenPaddingTop">
			
			<include
				layout="@layout/content_child_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				android:paddingBottom="@dimen/displayChildLocationPaddingBottom"
				android:paddingTop="@dimen/findChildrenLocationPaddingTop"
				tools:ignore="UseCompoundDrawables">
				
				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/find_children_location_text_view"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center_vertical"
					android:paddingEnd="@dimen/findChildrenLocationTextPaddingEnd"
					android:paddingStart="@dimen/findChildrenLocationTextPaddingStart"
					android:text="@string/no_last_known_location_specified" />
				
				<ImageView
					android:id="@+id/find_children_location_image_view"
					android:layout_width="@dimen/findChildrenLocationIconWidth"
					android:layout_height="@dimen/findChildrenLocationIconHeight"
					android:layout_marginEnd="@dimen/findChildrenLocationIconMarginEnd"
					android:layout_marginStart="@dimen/findChildrenLocationIconMarginStart"
					android:contentDescription="@string/point_location_on_map"
					app:srcCompat="@drawable/ic_google_maps" />
			
			</LinearLayout>
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				android:paddingBottom="@dimen/displayChildPickersPaddingBottom">
				
				<com.google.android.material.textview.MaterialTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingEnd="@dimen/findChildrenLabelPaddingEnd"
					android:paddingStart="@dimen/findChildrenLabelPaddingStart"
					android:textSize="@dimen/findChildrenLabelTextSize"
					android:text="@string/age"
					android:textColor="@android:color/black" />
				
				<inc.ahmedmourad.sherlock.view.views.ProperNumberPicker
					android:id="@+id/find_children_age_number_picker"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/displayChildAgePickerMarginEnd"
					app:maxValue="30"
					app:minValue="0"
					app:value="@integer/find_children_age_number_picker_default_value" />
				
				<com.google.android.material.textview.MaterialTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingEnd="@dimen/findChildrenLabelPaddingEnd"
					android:paddingStart="@dimen/findChildrenLabelPaddingStart"
					android:textSize="@dimen/findChildrenLabelTextSize"
					android:text="@string/height"
					android:textColor="@android:color/black" />
				
				<inc.ahmedmourad.sherlock.view.views.ProperNumberPicker
					android:id="@+id/find_children_height_number_picker"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:maxValue="200"
					app:minValue="40"
					app:value="@integer/find_children_height_number_picker_default_value" />
			
			</LinearLayout>
			
			<include
				layout="@layout/content_child_gender"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
			
			<include
				layout="@layout/content_child_skin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
			
			<include
				layout="@layout/content_child_hair"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp" />
			
			<com.google.android.material.button.MaterialButton
				android:id="@+id/find_children_search_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/findChildrenButtonMarginEnd"
				android:layout_marginStart="@dimen/findChildrenButtonMarginStart"
				android:layout_marginTop="@dimen/findChildrenButtonMarginTop"
				android:padding="@dimen/findChildrenButtonPadding"
				android:background="@color/colorAccent"
				android:text="@string/search"
				android:textColor="@android:color/white"
				tools:ignore="UnusedAttribute" />
		
		</LinearLayout>
	
	</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
