<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="false">
	
	<include
		layout="@layout/content_toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
	
	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/home_recycler"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:clipToPadding="false"
		app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
		android:paddingBottom="@dimen/homeRecyclerPaddingBottom"
		android:paddingTop="@dimen/homeRecyclerPaddingTop"
		android:background="@color/colorRecyclerBackground" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
